migrated from WrappedComponent to separate Component artifact. TLDR; removed dark magic.